# SleepGPT

./: README.md  Test_cap.sh  eval_psg_stage_kfold.py  pyproject.toml  requirements.txt  run_cap_local.py  run_ft_cap_pathology_kfold.py  run_inference_cap_pathology.py  run_test_cap_persub.py  start_ft_cap_pathology_local.sh  train_cap_stage_kfold.py  train_psg_stage_kfold.py
docs/: custom_psg_sleepgpt_pipeline.md
main/: config.py
main/RemCluster/pseudo_label/: make_idx.py
main/Visualization/: All_time.py  PPT.py  VIsual_heatmap.py  Visual_spinde_orig.py  Visual_spindle_6results.py  Visual_spindle_result.py  Visual_violin.py  Visual_violinplot.py  cal_all_file_time.py  find_test.py  for_test.py  local_fault.py  local_visual_fft.py  p-value.py  plot_conf.py  plot_mask_nmse.py  read_yaml_to_csv.py  shhs_osa.py  visual_diff.py  visual_heatmap_unsupervised.py  visual_mask.py  visual_mass_sp_result.py  visual_pe.py  visual_portion.py  visual_portion_2.py  visual_portion_perclass.py  visual_portion_perclass_line.py  visual_portion_perclasss_line_new.py  visual_pvalue.py  visual_spindles.py  visual_umap.py
main/Visualization/result/: apnea_results.py  (+2 more)
main/datasets/: PSG_dataset.py  __init__.py  new_base_dataset.py
main/modules/: backbone.py  multiway_transformer.py
main/transforms/: transform.py
main/utils/: __init__.py  count_params.py
result/concat1536/: kmeans.pkl  pca.pkl  scaler.pkl
result/out_epoch_concat/: kmeans.pkl  patch_index.csv  pca.pkl  scaler.pkl
slurm_setting/: make_gres_conf.sh  update_slrum_conf.sh
temp_log/rem_feat/: log  log2
(+19 files in other folders)
