[project]
name = "sleepgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "einops>=0.8.1",
    "h5py>=3.11.0",
    "lightning>=2.3.3",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pillow>=10.4.0",
    "pyarrow>=17.0.0",
    "pynvml>=11.5.3",
    "pytorch-lightning>=2.4.0",
    "sacred>=0.8.4",
    "scipy>=1.10.1",
    "tensorboard>=2.14.0",
    "timm>=1.0.26",
    "torch>=2.5.1",
    "torchmetrics>=1.5.2",
    "torchvision>=0.20.1",
    "tqdm>=4.67.3",
    "transformers>=4.46.3",
]
